2012-01-27  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/storage.go: fixes in storage loading.
	* webrocket-admin/main.go: cookie flag changed to raw text instead of cookie file path
	* webrocket/websocket_*.go: changed references to websocket package
	* webrocket/context.go: simplified cookie generation and locking
	* webrocket/README: updates
	* webrocket-admin/README: added readme file
	* webrocket-admin/main.go: added documentation
	* webrocket-server/README: updates
	* scripts/msg.sh: dummy script for displaying nice messages from makefile
	* Makefile: some styling changes, build dir changed from '_build' to 'build'
	* docs/Makefile: fixes
	* INSTALL: new installation steps accoring to Go weekly.2012-01-27 release
	* INTRO: added information to be displayed when make command successfully finishes
	* README: updates

2012-01-25  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/storage.go: switched to persival, get rid of kyoto cabinet
	* webrocket/vhost.go: storage adjustments
	* webrocket/context.go: storage adjustments
	* webrocket/channel.go: storage adjustments
	* webrocket/permission.go: storage adjustments

2012-01-24  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/backend_endpoint.go: fixed calls to GenerateSingleAccessToken
	* webrocket/channel.go: respecting uid in confirmations
	* webrocket/permission.go: added uid assigned to permission
	* webrocket/permission_test.go: fixed tests including uid
	* webrocket/subscription.go: added uid of subscribing client
	* webrocket/vhost.go: adjusted calls to NewPermission
	* webrocket/vhost_test.go: fixed tests
	* webrocket/webrocket_integration_test.go: added checking for uid in confirmations
	* webrocket/websocket_connection.go: fixed calls

2012-01-22  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket-server/main.go: locking and storage fixes
	* webrocket/context.go: locking and storage fixes
	* webrocket/channel.go: optimized broadcasting